# desktopmate_installer

./: Cargo.toml  README.md
src/: main.rs
