[package]
name = "desktopmate_installer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "gzip"] }
colored = "2"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = "0.6"
crossterm = "0.24"
dirs = "4"
uuid = { version = "1", features = ["v4"] }
winapi = { version = "0.3", features = ["wincon"] }
